Added User File and Stored User's Profile Picture and Name
- Added User File
- Added encoding and decoding function in User.m
- Renamed Save Data to Save Spotify Data
- Added function in Spotify Manager called SaveSpotifyUserData
- SaveSpotifyUserData saves the current users Profile Picture and Name
- Display the User's Profile Picture and name on ProfileViewController

Test Case
- Used Break points and NSLog to see if the objects were stored correctly
- Checked IOS Simulator to see if the profile picture and name displayed properly

--- a/MusicTaste/MusicTaste/Base.lproj/Main.storyboard
+++ b/MusicTaste/MusicTaste/Base.lproj/Main.storyboard
@@ -280,6 +280,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Swl-rn-oj0"/>
+                    <connections>
+                        <outlet property="profileView" destination="33c-SI-ggc" id="Bq6-FU-A04"/>
+                        <outlet property="screen_name" destination="WVV-Vf-6dK" id="5qU-so-Vmm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IVC-fJ-2UQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
