--- a/MusicTaste/MusicTaste/Base.lproj/Main.storyboard
+++ b/MusicTaste/MusicTaste/Base.lproj/Main.storyboard
@@ -958,48 +958,92 @@
                                     <segue destination="g1Z-iN-Qa5" kind="presentation" modalPresentationStyle="fullScreen" id="iYM-mJ-hnW"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zQ6-WI-nra">
-                                <rect key="frame" x="0.0" y="152" width="414" height="744"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zQ6-WI-nra">
+                                <rect key="frame" x="0.0" y="152" width="414" height="624"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="107" id="tQb-8U-qdH" customClass="MessageCell">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="107"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="126" id="tQb-8U-qdH" customClass="MessageCell">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="126"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tQb-8U-qdH" id="geA-YT-hUA">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="107"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="126"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8hj-qx-wWT">
-                                                    <rect key="frame" x="67" y="25" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8hj-qx-wWT">
+                                                    <rect key="frame" x="40" y="11" width="162" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="162" id="Ai4-op-9BW"/>
+                                                        <constraint firstAttribute="height" constant="21" id="PIx-U5-Zac"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DdY-tu-r5j">
-                                                    <rect key="frame" x="67" y="62" width="42" height="21"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="    Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DdY-tu-r5j">
+                                                    <rect key="frame" x="40" y="40" width="261" height="60"/>
+                                                    <color key="backgroundColor" systemColor="systemGray2Color"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="261" id="4D2-af-Rcz"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8hj-qx-wWT" firstAttribute="leading" secondItem="geA-YT-hUA" secondAttribute="leadingMargin" constant="20" id="VYT-gW-ssa"/>
+                                                <constraint firstItem="8hj-qx-wWT" firstAttribute="top" secondItem="geA-YT-hUA" secondAttribute="topMargin" id="Y8s-wV-bmJ"/>
+                                                <constraint firstItem="DdY-tu-r5j" firstAttribute="top" secondItem="8hj-qx-wWT" secondAttribute="bottom" constant="8" symbolic="YES" id="a4a-1h-pIF"/>
+                                                <constraint firstItem="DdY-tu-r5j" firstAttribute="leading" secondItem="geA-YT-hUA" secondAttribute="leadingMargin" constant="20" id="oa4-fM-2cc"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="DdY-tu-r5j" secondAttribute="bottom" constant="15" id="syL-5Z-T13"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="messageTextLabel" destination="DdY-tu-r5j" id="fni-zF-9Wc"/>
+                                            <outlet property="senderNameLabel" destination="8hj-qx-wWT" id="ja5-bb-dwI"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Wd-QZ-AoZ">
+                                <rect key="frame" x="319" y="790" width="75" height="31"/>
+                                <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="t6U-wn-jXY"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Send"/>
+                                <connections>
+                                    <action selector="sendbutton:" destination="QnK-ak-rmb" eventType="touchUpInside" id="AWh-hK-U5r"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P1O-QR-h3H">
+                                <rect key="frame" x="37" y="790" width="256" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="MTd-Sv-RcU"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6qd-Vr-zZj" firstAttribute="top" secondItem="MTd-Sv-RcU" secondAttribute="top" constant="10" id="3aU-bZ-hsu"/>
-                            <constraint firstItem="6qd-Vr-zZj" firstAttribute="leading" secondItem="MTd-Sv-RcU" secondAttribute="leading" constant="33" id="KnK-yN-L5d"/>
-                            <constraint firstItem="MTd-Sv-RcU" firstAttribute="trailing" secondItem="6qd-Vr-zZj" secondAttribute="trailing" constant="295" id="uic-Cl-KWo"/>
+                            <constraint firstAttribute="trailing" secondItem="zQ6-WI-nra" secondAttribute="trailing" id="0DM-16-BRF"/>
+                            <constraint firstItem="MTd-Sv-RcU" firstAttribute="trailing" secondItem="6qd-Vr-zZj" secondAttribute="trailing" constant="295" id="1zm-nd-ao5"/>
+                            <constraint firstItem="6qd-Vr-zZj" firstAttribute="leading" secondItem="MTd-Sv-RcU" secondAttribute="leading" constant="33" id="HQN-mG-jd2"/>
+                            <constraint firstItem="P1O-QR-h3H" firstAttribute="leading" secondItem="MTd-Sv-RcU" secondAttribute="leading" constant="37" id="NsX-K8-Uct"/>
+                            <constraint firstItem="zQ6-WI-nra" firstAttribute="top" secondItem="6qd-Vr-zZj" secondAttribute="bottom" constant="67" id="Wq2-v9-qgS"/>
+                            <constraint firstItem="zQ6-WI-nra" firstAttribute="leading" secondItem="esV-v3-7Yu" secondAttribute="leading" id="Y16-Vz-Fxr"/>
+                            <constraint firstItem="5Wd-QZ-AoZ" firstAttribute="leading" secondItem="P1O-QR-h3H" secondAttribute="trailing" constant="26" id="cks-cz-hCb"/>
+                            <constraint firstItem="P1O-QR-h3H" firstAttribute="top" secondItem="zQ6-WI-nra" secondAttribute="bottom" constant="14" id="fHm-JM-qD7"/>
+                            <constraint firstItem="5Wd-QZ-AoZ" firstAttribute="trailing" secondItem="esV-v3-7Yu" secondAttribute="trailingMargin" id="jCY-UC-k7D"/>
+                            <constraint firstItem="6qd-Vr-zZj" firstAttribute="top" secondItem="MTd-Sv-RcU" secondAttribute="top" constant="10" id="kAG-1O-yVs"/>
+                            <constraint firstItem="P1O-QR-h3H" firstAttribute="top" secondItem="5Wd-QZ-AoZ" secondAttribute="top" id="oOf-29-Lui"/>
+                            <constraint firstItem="MTd-Sv-RcU" firstAttribute="bottom" secondItem="P1O-QR-h3H" secondAttribute="bottom" constant="38" id="oji-5f-IiN"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="chatTableView" destination="zQ6-WI-nra" id="dIr-0Y-Zab"/>
+                        <outlet property="chatTableView" destination="zQ6-WI-nra" id="gJW-aE-GLW"/>
+                        <outlet property="messageField" destination="P1O-QR-h3H" id="Zqm-4R-ScC"/>
+                        <outlet property="sendButton" destination="5Wd-QZ-AoZ" id="dzF-II-Saa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dEU-m7-83X" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1059,6 +1103,12 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
